13ht Commit: Fixed a Bug in which player is unable to attack if he takes some damage while attacking. Refactored Block animation logic. Now, Block animation is played from AnimBP rather than AnimMontage. Implemented logic where player character will play "Block Hit" animation.

--- a/.gitignore
+++ b/.gitignore
@@ -92,3 +92,4 @@ Project/Content/StarterContent/
 Project/Content/AbandonedFactory/BaseMaterials/m_Base_Material_01.uasset
 Project/Content/AbandonedFactory/
 Content/MedievalDungeon/
+LocalDerivedDataCache/
