17th Commit: Fixed AI Different Z-axis bug. Changes in Light-Heavy Attack if conditions. Tried to fix AI Block stuck bug. Changed Player stamina consumption on attack. Increase AI attack pick probability. Added a map. Added Openable Doors. Implemented Drop pick functionality so the player can only open a door if he has specific item. Added Particles to indicate Pick item and activated door. Added Camera Transitions to indicate where to go to open a door after picking its necessary item.

--- a/.gitignore
+++ b/.gitignore
@@ -93,3 +93,4 @@ Project/Content/AbandonedFactory/BaseMaterials/m_Base_Material_01.uasset
 Project/Content/AbandonedFactory/
 Content/MedievalDungeon/
 LocalDerivedDataCache/
+Content/InfinityBladeGrassLands/
