20th Commit: Added Tutorial Map. New Player can Start Tutorial if they want to or they can totally skip it. Tried to Add background music.

--- a/.gitignore
+++ b/.gitignore
@@ -94,3 +94,5 @@ Project/Content/AbandonedFactory/
 Content/MedievalDungeon/
 LocalDerivedDataCache/
 Content/InfinityBladeGrassLands/
+FinalBuild/
+Content/Music/
