Final Commit: Added Death Partical Effect. Added SFX in Game.

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,3 +1,7 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=A92363964235F6B8F0308494F1C5AE10
 ProjectName=Third Person BP Game Template
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+FullRebuild=False
+
