--- a/.gitignore
+++ b/.gitignore
@@ -96,3 +96,5 @@ LocalDerivedDataCache/
 Content/InfinityBladeGrassLands/
 FinalBuild/
 Content/Music/
+Content/Sound/SC_MainMenu.uasset
+Content/Sound/
